--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "svelte-app",
   "version": "1.0.0",
   "devDependencies": {
-    "@smui/button": "^1.0.0-beta.16",
+    "express": "^4.17.1",
     "npm-run-all": "^4.1.5",
+    "path": "^0.12.7",
     "rollup": "^1.12.0",
     "rollup-plugin-commonjs": "^10.0.0",
     "rollup-plugin-livereload": "^1.0.0",
