--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "svelte-material-ui": "^1.0.0-beta.15"
   },
   "dependencies": {
-    "sirv-cli": "^0.4.4"
+    "sirv-cli": "^0.4.4",
+    "uuid": "^3.3.3"
   },
   "scripts": {
     "build": "rollup -c",
