--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "svelte-material-ui": "^1.0.0-beta.15"
   },
   "dependencies": {
+    "fuse.js": "^3.4.5",
     "sirv-cli": "^0.4.4",
     "svelte-routing": "^1.4.0",
     "uuid": "^3.3.3"
