--- a/functions/package.json
+++ b/functions/package.json
@@ -12,8 +12,11 @@
     "node": "8"
   },
   "dependencies": {
+    "@vitalets/google-translate-api": "^3.0.0",
     "firebase-admin": "^8.0.0",
-    "firebase-functions": "^3.1.0"
+    "firebase-functions": "^3.1.0",
+    "isomorphic-fetch": "^2.2.1",
+    "querystring": "^0.2.0"
   },
   "devDependencies": {
     "firebase-functions-test": "^0.1.6"
