--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "path": "^0.12.7",
     "rollup": "^1.12.0",
     "rollup-plugin-commonjs": "^10.0.0",
+    "rollup-plugin-json": "^4.0.0",
     "rollup-plugin-livereload": "^1.0.0",
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-svelte": "^5.0.3",
@@ -15,9 +16,13 @@
     "svelte-material-ui": "^1.0.0-beta.15"
   },
   "dependencies": {
+    "@vitalets/google-translate-api": "^3.0.0",
     "fuse.js": "^3.4.5",
+    "google-translate-api": "^2.3.0",
+    "querystring": "^0.2.0",
     "sirv-cli": "^0.4.4",
     "svelte-routing": "^1.4.0",
+    "translate-google": "^1.3.5",
     "uuid": "^3.3.3"
   },
   "scripts": {
